--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -18,22 +19,22 @@
 	<div style="border: 3px solid gray; width: 75%; margin: 10px auto; padding: 5px; text-align: center; display: flex; justify-content: space-between;">
 		<h3>127</h2>
 		<h3>Example Link #1<h2>
-		<img src="image0.jpg" width="50px" height="25px">
+		<img src="image0.jpg" width="50px" height="28px">
 	</div>
 	<div style="border: 3px solid gray; width: 75%; margin: 10px auto; padding: 5px; text-align: center; display: flex; justify-content: space-between;">
 		<h3>127</h2>
 		<h3>Example Link #2<h2>
-		<img src="image0.jpg" width="50px" height="25px">
+		<img src="image0.jpg" width="50px" height="28px">
 	</div>
 	<div style="border: 3px solid gray; width: 75%; margin: 10px auto; padding: 5px; text-align: center; display: flex; justify-content: space-between;">
 		<h3>127</h2>
 		<h3>Example Link #3<h2>
-		<img src="image0.jpg" width="50px" height="25px">
+		<img src="image0.jpg" width="50px" height="28px">
 	</div>
 	<div style="border: 3px solid gray; width: 75%; margin: 10px auto; padding: 5px; text-align: center; display: flex; justify-content: space-between;">
 		<h3>127</h2>
 		<h3>Example Link #4<h2>
-		<img src="image0.jpg" width="50px" height="25px">
+		<img src="image0.jpg" width="50px" height="28px">
 	</div>
 </body>
 
