--- a/index.html
+++ b/index.html
@@ -4,37 +4,39 @@
 <head>
 	<link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="Main Page of the project I'm doing for the Web Development course."/>
+	<title>Main Page</title>
 </head>
 <body>
 	<div style="text-align: center;">
 		<h1>Popular in last 24 hours</h1>
 	<div>
 		 <span>Show popular links from </span>
-		 <span><button>past hour</button><span>
-		 <span><button>past day</button><span>
-		 <span><button>past week</button><span>
-		 <span><button>all time</button><span>
+		 <span><button type="button" style="background-color: orange; border: none; color: black; padding: 15px 22px; text-align: center; font-size: 16px;">past hour</button><span>
+		 <span><button type="button" style="background-color: orange; border: none; color: black; padding: 15px 22px; text-align: center; font-size: 16px;">past day</button><span>
+		 <span><button type="button" style="background-color: orange; border: none; color: black; padding: 15px 22px; text-align: center; font-size: 16px;">past week</button><span>
+		 <span><button type="button" style="background-color: orange; border: none; color: black; padding: 15px 22px; text-align: center; font-size: 16px;">all time</button><span>
 	</div>
 	</div>
 	<div style="border: 3px solid gray; width: 75%; margin: 10px auto; padding: 5px; text-align: center; display: flex; justify-content: space-between;">
 		<h3>127</h2>
 		<h3>Example Link #1<h2>
-		<img src="image0.jpg" width="50px" height="28px">
+		<img src="image0.jpg" width="50px" height="28px" alt="">
 	</div>
 	<div style="border: 3px solid gray; width: 75%; margin: 10px auto; padding: 5px; text-align: center; display: flex; justify-content: space-between;">
 		<h3>127</h2>
 		<h3>Example Link #2<h2>
-		<img src="image0.jpg" width="50px" height="28px">
+		<img src="image0.jpg" width="50px" height="28px" alt="">
 	</div>
 	<div style="border: 3px solid gray; width: 75%; margin: 10px auto; padding: 5px; text-align: center; display: flex; justify-content: space-between;">
 		<h3>127</h2>
 		<h3>Example Link #3<h2>
-		<img src="image0.jpg" width="50px" height="28px">
+		<img src="image0.jpg" width="50px" height="28px" alt="">
 	</div>
 	<div style="border: 3px solid gray; width: 75%; margin: 10px auto; padding: 5px; text-align: center; display: flex; justify-content: space-between;">
 		<h3>127</h2>
 		<h3>Example Link #4<h2>
-		<img src="image0.jpg" width="50px" height="28px">
+		<img src="image0.jpg" width="50px" height="28px" alt="">
 	</div>
 </body>
 
