china-cyber-espionage

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <ul>
         <li>- <a href="/blog">blog</a></li>
         <li>- <a href="https://chat.tuuli.moe">tuuli chat</a></li>
-        <li>- <a href="https://mango.tuuli.moe">mango</a></li>
+        <li>- <del><a href="https://mango.tuuli.moe">mango</a></del></li>
     </ul>
     
 </body>
